fix(cart): hide price sum on mobile portrait screens

--- a/src/features/CartCount/CartCount.module.scss
+++ b/src/features/CartCount/CartCount.module.scss
@@ -10,6 +10,12 @@
   }
 }
 
+.price {
+  @media (max-width: 450px) {
+    display: none;
+  }
+}
+
 .amount {
   padding: 5px;
   min-width: 24px;
